--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,11 +1,11 @@
 *{
     box-sizing: border-box;
+    
 }
 
 nav{
     background: rgb(128, 216, 162);
-    
-   
+   width: 100%;
 }
 
 
@@ -13,7 +13,7 @@ nav{
     background-image: url("../img/fahd-khan-mrFdBdTlElk-unsplash.jpg");
 
     padding: 300px;
-    background-size: cover;
+    background-size:100%;
     background-repeat: no-repeat;
 }
 
@@ -59,7 +59,9 @@ h1{
 .card-text, .card-title{
 
     color:  rgb(135, 196, 75);
-    font-size: 30px;
+    font-size: 30px; display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
@@ -86,4 +88,26 @@ h1{
 
 .rodape{
     background: rgb(117, 133, 102) ;
+}
+
+
+@media screen and (max-width:700px) {
+    nav{
+
+        width: 100%;
+        background:chartreuse ;
+    }
+
+    .banner{
+        width: 100%;
+        background-size: 100%;
+    } .card{
+
+        display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    .btn{
+        width:auto
+    }
 }
