--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -12,12 +12,13 @@ nav{
 .banner{
     background-image: url("../img/fahd-khan-mrFdBdTlElk-unsplash.jpg");
 
-    padding: 300px;
-    background-size:100%;
+   height: 600px;
+  background-size: 100% ;
+  padding-top: 300px;
     background-repeat: no-repeat;
 }
 
-h1{
+ h1{
     text-align: center;
     color: #fff;
   
@@ -56,10 +57,11 @@ h1{
     background: rgb(135, 196, 75);
 }
 
-.card-text, .card-title{
+.card1.card-text, .card-title{
 
     color:  rgb(135, 196, 75);
-    font-size: 30px; display: flex;
+    font-size: 30px; 
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -77,6 +79,12 @@ h1{
 
 }
 
+
+
+.lojafruta img{
+
+    width: 100%;
+}
 
 
 
@@ -107,7 +115,6 @@ h1{
     justify-content: center;
     align-items: center;
     }
-    .btn{
-        width:auto
-    }
+   
+    
 }
